v0.2.0: compilacion exitosa, ajustes de API para MC 26.1.2